# drawit-dash-app

./: .gitignore  README.md  READNE.md  app.py  dash_app.py  setup.cfg
data/: outputs_all_nondom.csv
src/: callbacks.py
src/components/: constants.py  download_button.py  heatmap.py  introduction.py  layout.py  plot_3d.py
src/data/: loader.py
src/drawit_app/: dash_app.py  requirements.txt  simple_tabs.py  utils.py
src/drawit_app/assets/css/: style.css
src/drawit_app/components/: body.py  constants.py  data_table.py  download_button.py  dropdowns.py  heatmap.py  ids.py  introduction.py  layout.py  parallel_plot.py  pie_chart.py  plot_3d.py  radio_items.py  utils.py
