[options.entry_points]
console_scripts=
    drawit_app = drawit_app.dash_app:main

[pydocstyle]
inherit = false
ignore = D100,D203,D405
match = .*\.py

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
pretty = True
show_error_codes = True
